# rogue-anticheat

./: .gitignore  README.md  pom.xml
rogue-server/: CMakeLists.txt  app.py  config.json  config.py  pom.xml
rogue-server/check/: auto_clicker_check.py  check.py  check_manager.py  check_template.py  movement_check.py  packet_check.py  rotation_check.py  velocity_check.py
rogue-server/check/checks/: auto_clicker_a.py
rogue-server/check/checks/speed/: speed_a.py
rogue-server/data/: player_data.py
rogue-server/sources/: main.cpp
rogue-server/sources/app/: rogue_app.cpp  rogue_app.h
rogue-server/sources/check/: check.h
rogue-server/sources/check/impl/: badpackets_a.h
rogue-server/sources/check/type/: autoclicker_check.h  movement_check.h  packet_check.h
rogue-server/sources/config/: rogue_config.cpp  rogue_config.h
rogue-server/sources/data/: player_data.cpp  player_data.h  player_template.h  tracker_provider.h
rogue-server/sources/event/: event.h
rogue-server/sources/location/: block_location.cpp  block_location.h  custom_location.cpp  custom_location.h  vector.cpp  vector.h
rogue-server/sources/packet/: packet.h  packet_wrapper.h
rogue-server/sources/tracker/: tracker.h
rogue-server/sources/util/: collisions.h  potion_effect_type.h
rogue-server/sources/violation/: violation.cpp  violation.h
rogue-server/tracker/: tracker_template.py
rogue-server/tracker/trackers/: action_tracker.py  collision_tracker.py  movement_tracker.py  ping_trackcer.py  potion_tracker.py
rogue-server/util/: location.py  math_util.py  potion_effect_type.py
(+236 files in other folders)
